# halfremembered-bevy-alacritty

./: .gitignore  .hrlauncher.toml  .rustfmt.toml  AGENT_GUIDE.md  BOTS.md  Cargo.toml  README.md  run-headless.sh
.cargo/: config.toml
.gemini/: settings.json
.github/workflows/: ci.yml
assets/shaders/: terminal.wgsl
bevy-terminal/: Cargo.toml
bevy-terminal/assets/fonts/: README.md
bevy-terminal/assets/shaders/: terminal.wgsl
bevy-terminal/src/: atlas.rs  colors.rs  events.rs  font.rs  gpu_prep.rs  gpu_types.rs  input.rs  lib.rs  pty.rs  render_node.rs  renderer.rs  terminal.rs
bevy-terminal/tests/: gpu_prep_test.rs  pty_compat_test.rs  renderer_test.rs  terminal_grid_test.rs
docs/: collaboration.md  continuation-prompt.md  headless-debugging-case-study.md  launcher-guide.md  next-steps.md  technical-design.md
docs/plan-bootstrap/: 00-overview.md  01-project-initialization.md  02-dependencies.md  03-implementation-roadmap.md  04-font-rendering.md  05-testing-strategy.md  06-workflow.md  07-integration-checklist.md
docs/reviews/: phase-1.1-pty-spawning.md  phase-1.1-review-prompt.txt  phase-1.3-1.4-pty-io.md  phase-1.3-1.4-review-prompt.txt  phase-3-rendering.md  phase-3-review-prompt.txt
examples/claude_crt/: Cargo.toml  README.md
examples/claude_crt/src/: main.rs
scripts/: download-fonts.sh
