[package]
name = "claude_crt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bevy = { workspace = true, default-features = true }
bevy-terminal = { path = "../../bevy-terminal" }
bevy_remote = "0.17.2"
bevy_brp_extras = "0.17.0"
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
